<?xml version="1.0"?>
<package>
  <name>dualarm_sample</name>
  <version>0.0.0</version>
  <description>The dualarm_sample package</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>
  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="iisaito@opensource-robotics.tokyo.jp">Isaac I.Y. Saito</author>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/dualarm_sample</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>motoman_sda10f_moveit_config</build_depend>
  <build_depend>nextage_moveit_config</build_depend>
  <run_depend>motoman_sda10f_moveit_config</run_depend>
  <run_depend>nextage_moveit_config</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export/>
</package>